// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`technology test renders correctly 1`] = `
Array [
  <div
    className="col-3 text-center"
  >
    <div
      className="list-group"
    >
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        A
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        B
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        C
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        D
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        E
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        F
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        G
      </button>
    </div>
    <div
      className="btn_group"
    >
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type="button"
      >
        <span
          className="title"
        >
          Analyze
        </span>
        <img
          className="icon"
          src="icons8-search-w.svg"
        />
      </button>
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type="button"
      >
        <span
          className="title"
        >
          Reset
        </span>
        <img
          className="icon"
          src="icons8-instagram-old-w.svg"
        />
      </button>
    </div>
  </div>,
  <div
    className="col-9 text-center"
  >
    <svg
      height="300"
      width="600"
    >
      <path
        d="M 100 120 l 100 -100"
        fill="none"
        id="lineAB"
        stroke="red"
        strokeWidth="3"
      />
      <path
        d="M 200 20 l 100 100"
        fill="none"
        id="lineAC"
        stroke="yellow"
        strokeWidth="3"
      />
      <path
        d="M 100 120 l -80 80"
        fill="none"
        id="lineBD"
        stroke="blue"
        strokeWidth="3"
      />
      <path
        d="M 100 120 l 200 0"
        fill="none"
        id="lineBC"
        stroke="grey"
        strokeWidth="3"
      />
      <path
        d="M 100 120 l 50 50"
        fill="none"
        id="lineBE"
        stroke="purple"
        strokeWidth="3"
      />
      <path
        d="M 300 120 l 80 50"
        fill="none"
        id="lineCG"
        stroke="green"
        strokeWidth="3"
      />
      <path
        d="M 300 120 l -70 110"
        fill="none"
        id="lineCF"
        stroke="pink"
        strokeWidth="3"
      />
      <g
        fill="black"
      >
        <circle
          cx="200"
          cy="20"
          id="pointA"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="100"
          cy="120"
          id="pointB"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="300"
          cy="120"
          id="pointC"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="20"
          cy="200"
          id="pointD"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="150"
          cy="170"
          id="pointE"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="230"
          cy="230"
          id="pointF"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="380"
          cy="170"
          id="pointG"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
      </g>
      <g
        fill="black"
        fontFamily="sans-serif"
        fontSize="18"
        stroke="none"
        textAnchor="middle"
      >
        <text
          dy="-10"
          x="200"
          y="20"
        >
          A
        </text>
        <text
          dx="-30"
          x="100"
          y="120"
        >
          B
        </text>
        <text
          dx="30"
          x="300"
          y="120"
        >
          C
        </text>
        <text
          dx="-30"
          x="20"
          y="200"
        >
          D
        </text>
        <text
          dx="30"
          x="150"
          y="170"
        >
          E
        </text>
        <text
          dx="-30"
          x="230"
          y="230"
        >
          F
        </text>
        <text
          dx="30"
          x="380"
          y="170"
        >
          G
        </text>
        <text
          dx="-10"
          x="150"
          y="65"
        >
          2
        </text>
        <text
          dx="10"
          x="250"
          y="65"
        >
          2
        </text>
        <text
          dy="-10"
          x="200"
          y="120"
        >
          3
        </text>
        <text
          dx="-15"
          x="60"
          y="160"
        >
          3
        </text>
        <text
          dx="10"
          x="125"
          y="145"
        >
          1
        </text>
        <text
          dx="-15"
          x="265"
          y="175"
        >
          4
        </text>
        <text
          dx="20"
          x="340"
          y="145"
        >
          1.5
        </text>
      </g>
    </svg>
    <div
      className="d-flex flex-row bd-highlight mb-3 justify-content-center"
    />
  </div>,
]
`;

exports[`technology test renders correctly 2`] = `
Array [
  <div
    className="col-3 text-center"
  >
    <div
      className="list-group"
    >
      <button
        className="list-group-item list-group-item-action active d-flex justify-content-center"
        type="button"
      >
        A
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        B
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        C
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        D
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        E
      </button>
      <button
        className="list-group-item list-group-item-action active d-flex justify-content-center"
        type="button"
      >
        F
      </button>
      <button
        className="list-group-item list-group-item-action d-flex justify-content-center"
        type="button"
      >
        G
      </button>
    </div>
    <div
      className="btn_group"
    >
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type="button"
      >
        <span
          className="title"
        >
          Analyze
        </span>
        <img
          className="icon"
          src="icons8-search-w.svg"
        />
      </button>
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type="button"
      >
        <span
          className="title"
        >
          Reset
        </span>
        <img
          className="icon"
          src="icons8-instagram-old-w.svg"
        />
      </button>
    </div>
  </div>,
  <div
    className="col-9 text-center"
  >
    <svg
      height="300"
      width="600"
    >
      <path
        d="M 100 120 l 100 -100"
        fill="none"
        id="lineAB"
        stroke="red"
        strokeWidth="3"
      />
      <path
        d="M 200 20 l 100 100"
        fill="none"
        id="lineAC"
        stroke="yellow"
        strokeWidth="3"
      />
      <path
        d="M 100 120 l -80 80"
        fill="none"
        id="lineBD"
        stroke="blue"
        strokeWidth="3"
      />
      <path
        d="M 100 120 l 200 0"
        fill="none"
        id="lineBC"
        stroke="grey"
        strokeWidth="3"
      />
      <path
        d="M 100 120 l 50 50"
        fill="none"
        id="lineBE"
        stroke="purple"
        strokeWidth="3"
      />
      <path
        d="M 300 120 l 80 50"
        fill="none"
        id="lineCG"
        stroke="green"
        strokeWidth="3"
      />
      <path
        d="M 300 120 l -70 110"
        fill="none"
        id="lineCF"
        stroke="pink"
        strokeWidth="3"
      />
      <g
        fill="black"
      >
        <circle
          cx="200"
          cy="20"
          id="pointA"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="100"
          cy="120"
          id="pointB"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="300"
          cy="120"
          id="pointC"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="20"
          cy="200"
          id="pointD"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="150"
          cy="170"
          id="pointE"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="230"
          cy="230"
          id="pointF"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="380"
          cy="170"
          id="pointG"
          onClick={[Function]}
          r="4"
          stroke="black"
          strokeWidth="4"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
      </g>
      <g
        fill="black"
        fontFamily="sans-serif"
        fontSize="18"
        stroke="none"
        textAnchor="middle"
      >
        <text
          dy="-10"
          x="200"
          y="20"
        >
          A
        </text>
        <text
          dx="-30"
          x="100"
          y="120"
        >
          B
        </text>
        <text
          dx="30"
          x="300"
          y="120"
        >
          C
        </text>
        <text
          dx="-30"
          x="20"
          y="200"
        >
          D
        </text>
        <text
          dx="30"
          x="150"
          y="170"
        >
          E
        </text>
        <text
          dx="-30"
          x="230"
          y="230"
        >
          F
        </text>
        <text
          dx="30"
          x="380"
          y="170"
        >
          G
        </text>
        <text
          dx="-10"
          x="150"
          y="65"
        >
          2
        </text>
        <text
          dx="10"
          x="250"
          y="65"
        >
          2
        </text>
        <text
          dy="-10"
          x="200"
          y="120"
        >
          3
        </text>
        <text
          dx="-15"
          x="60"
          y="160"
        >
          3
        </text>
        <text
          dx="10"
          x="125"
          y="145"
        >
          1
        </text>
        <text
          dx="-15"
          x="265"
          y="175"
        >
          4
        </text>
        <text
          dx="20"
          x="340"
          y="145"
        >
          1.5
        </text>
      </g>
    </svg>
    <div
      className="d-flex flex-row bd-highlight mb-3 justify-content-center"
    />
  </div>,
]
`;
